--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "bossy": "1.x.x",
-    "esprima": "1.x.x",
+    "espree": "1.10.x",
     "handlebars": "2.x.x",
     "items": "1.x.x",
     "diff": "1.x.x",
